# kleidiai

./: .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  Qualcomm.md  Qualcomm_README.md  README.md  get_requirements_tools.sh  run.sh
.github/workflows/: preflight-checker-workflow.yml  qcom-preflight-checks.yml  stale-issues.yaml
benchmark/: README.md  main.cpp
benchmark/dwconv/: dwconv_benchmark_logic.hpp  dwconv_interface.hpp  dwconv_registry.cpp  dwconv_registry.hpp  dwconv_runner.hpp
benchmark/imatmul/: imatmul_benchmark_logic.hpp  imatmul_registry.cpp
benchmark/matmul/: matmul_benchmark_logic.hpp  matmul_registry.cpp
cmake/toolchains/: aarch64-none-linux-gnu.toolchain.cmake
docs/: README.md
examples/dft_f32_f32p_f32p/: CMakeLists.txt  dft_f32_f32p_f32p.cpp  run.sh
examples/matmul_clamp_f16_f16_f16p/: CMakeLists.txt  README.md  matmul_clamp_f16_f16_f16p.cpp
examples/matmul_clamp_f32_bf16p_bf16p/: CMakeLists.txt  README.md  matmul_clamp_f32_bf16p_bf16p.cpp
examples/matmul_clamp_f32_f32p_f32p/: CMakeLists.txt  README.md  matmul_clamp_f32_f32p_f32p.cpp
examples/matmul_clamp_f32_qai8dxp_qsi4c32p/: CMakeLists.txt  README.md  matmul_clamp_f32_qai8dxp_qsi4c32p.cpp
examples/matmul_clamp_f32_qai8dxp_qsi4cxp/: CMakeLists.txt  README.md  matmul_clamp_f32_qai8dxp_qsi4cxp.cpp
examples/matmul_clamp_f32_qai8dxp_qsi8cxp/: CMakeLists.txt  README.md  matmul_clamp_f32_qai8dxp_qsi8cxp.cpp
examples/matmul_clamp_f32_qsi8d32p_qsi4c32p/: CMakeLists.txt  matmul_clamp_f32_qsi8d32p_qsi4c32p.cpp
examples/matmul_clamp_qai8_qai8p_qsi8cxp/: CMakeLists.txt  README.md  matmul_clamp_qai8_qai8p_qsi8cxp.cpp
kai/: helper.S  kai_common.h
kai/ukernels/dwconv/dwconv_f32_f32_f32p/: kai_dwconv_clamp_f32_f32_f32p1vlx1b_3x3_s1_4xc_sme1_mla.c  kai_dwconv_clamp_f32_f32_f32p1vlx1b_3x3_s1_4xc_sme1_mla.h  kai_dwconv_clamp_f32_f32_f32p1vlx1b_3x3_s1_4xc_sme1_mla_asm.S
kai/ukernels/matmul/: BUILD.bazel  README.md  kai_matmul.h
kai/ukernels/matmul/imatmul_clamp_f16_f16p_f16p/: helper_macros_imatmul_clamp_f16_f16p_f16p.S  kai_imatmul_clamp_f16_f16p2vlx2_f16p2vlx2_2vlx2vl_qmx_mopa.c  kai_imatmul_clamp_f16_f16p2vlx2_f16p2vlx2_2vlx2vl_qmx_mopa.h  kai_imatmul_clamp_f16_f16p2vlx2_f16p2vlx2_2vlx2vl_qmx_mopa_asm.S  kai_imatmul_clamp_f16_f16p2vlx2_f16p2vlx2_2vlx2vl_sme1_mopa.c  kai_imatmul_clamp_f16_f16p2vlx2_f16p2vlx2_2vlx2vl_sme1_mopa.h  kai_imatmul_clamp_f16_f16p2vlx2_f16p2vlx2_2vlx2vl_sme1_mopa_asm.S
kai/ukernels/matmul/imatmul_clamp_f32_f32p_f32p/: helper_macros_imatmul_clamp_f32_f32p_f32p.S  kai_imatmul_clamp_f32_f32p2vlx1_f32p2vlx1b_2vlx2vl_qmx_mopa.c  kai_imatmul_clamp_f32_f32p2vlx1_f32p2vlx1b_2vlx2vl_qmx_mopa.h  kai_imatmul_clamp_f32_f32p2vlx1_f32p2vlx1b_2vlx2vl_qmx_mopa_asm.S  kai_imatmul_clamp_f32_f32p2vlx1_f32p2vlx1b_2vlx2vl_sme1_mopa.c  kai_imatmul_clamp_f32_f32p2vlx1_f32p2vlx1b_2vlx2vl_sme1_mopa.h  kai_imatmul_clamp_f32_f32p2vlx1_f32p2vlx1b_2vlx2vl_sme1_mopa_asm.S
kai/ukernels/matmul/imatmul_clamp_qai8_qai8p_qsi8cxp/: helper_macros_imatmul_clamp_qai8_qai8p_qsi8cxp.S  kai_imatmul_clamp_qai8_qai8p2vlx4_qsi8cxpsb2vlx4_2vlx2vl_qmx_mopa.c  kai_imatmul_clamp_qai8_qai8p2vlx4_qsi8cxpsb2vlx4_2vlx2vl_qmx_mopa.h  kai_imatmul_clamp_qai8_qai8p2vlx4_qsi8cxpsb2vlx4_2vlx2vl_qmx_mopa_asm.S  kai_imatmul_clamp_qai8_qai8p2vlx4_qsi8cxpsb2vlx4_2vlx2vl_sme1_mopa.c  kai_imatmul_clamp_qai8_qai8p2vlx4_qsi8cxpsb2vlx4_2vlx2vl_sme1_mopa.h  kai_imatmul_clamp_qai8_qai8p2vlx4_qsi8cxpsb2vlx4_2vlx2vl_sme1_mopa_asm.S
kai/ukernels/matmul/matmul_clamp_f16_f16_f16p/: kai_matmul_clamp_f16_f16_f16p2vlx2b_1x16vl_qmx_dot.c  kai_matmul_clamp_f16_f16_f16p2vlx2b_1x16vl_qmx_dot.h  kai_matmul_clamp_f16_f16_f16p2vlx2b_1x16vl_qmx_dot_asm.S  kai_matmul_clamp_f16_f16_f16p2vlx2b_1x16vl_sme1_dot.c  kai_matmul_clamp_f16_f16_f16p2vlx2b_1x16vl_sme1_dot.h  kai_matmul_clamp_f16_f16_f16p2vlx2b_1x16vl_sme1_dot_asm.S
kai/ukernels/matmul/matmul_clamp_f16_f16p_f16p/: kai_matmul_clamp_f16_f16p2vlx2_f16p2vlx2_2vlx2vl_qmx_mopa.c  kai_matmul_clamp_f16_f16p2vlx2_f16p2vlx2_2vlx2vl_qmx_mopa.h  kai_matmul_clamp_f16_f16p2vlx2_f16p2vlx2_2vlx2vl_qmx_mopa_asm.S  kai_matmul_clamp_f16_f16p2vlx2_f16p2vlx2_2vlx2vl_sme1_mopa.c  kai_matmul_clamp_f16_f16p2vlx2_f16p2vlx2_2vlx2vl_sme1_mopa.h  kai_matmul_clamp_f16_f16p2vlx2_f16p2vlx2_2vlx2vl_sme1_mopa_asm.S  kai_matmul_clamp_f16_f16p2vlx2_f16p2vlx2_2vlx2vl_sme2_mopa_asm.S
kai/ukernels/matmul/matmul_clamp_f16_f16p_qai4c32p/: kai_matmul_clamp_f16_f16p1vlx2_qai4c32p4vlx2_1vlx4vl_sme2_mopa.c  kai_matmul_clamp_f16_f16p1vlx2_qai4c32p4vlx2_1vlx4vl_sme2_mopa.h  kai_matmul_clamp_f16_f16p1vlx2_qai4c32p4vlx2_1vlx4vl_sme2_mopa_asm.S  kai_matmul_clamp_f16_f16p1vlx2_qai4c32p4vlx2_1vlx4vl_sme2_mopa_asm.S.backup  kai_matmul_clamp_f16_f16p_qai4c32p_interface.h
kai/ukernels/matmul/matmul_clamp_f16_qai8dxp_qsi8cxp/: kai_matmul_clamp_f16_qai8dxp1vlx4_qsi8cxp4vlx4_1vlx4vl_sme1_mopa.c  kai_matmul_clamp_f16_qai8dxp1vlx4_qsi8cxp4vlx4_1vlx4vl_sme1_mopa.h  kai_matmul_clamp_f16_qai8dxp1x4_qsi8cxp4vlx4_1x4vl_sme1_dot.c  (+3 more)
pack/: kai_lhs_pack_bf16p2vlx2_f32_sme.c
test/common/: assert.hpp  buffer.hpp  compare.cpp  cpu_info.cpp  cpu_info.hpp  data_type.cpp  data_type.hpp  matmul_test_common.cpp  matmul_test_common.hpp  matrix_portion.cpp  memory.cpp  memory.hpp  printer.cpp  type_traits.hpp
test/reference/: clamp.cpp  clamp.hpp  fill.cpp  fill.hpp  matmul.cpp  quantize.cpp
test/tests/: dwconv_test.cpp  imatmul_test.cpp  matmul_clamp_bf16_qai8dxp_qsi4cxp_test.cpp  matmul_clamp_f16_bf16p_bf16p_test.cpp  matmul_clamp_f16_f16p_qai4c32p_test.cpp  matmul_clamp_f16_qai8dxp_qsi4cxp_test.cpp  matmul_clamp_f16_qai8dxp_qsi8cxp_test.cpp  matmul_clamp_f16_qsi8d32p_qai4c32p_test.cpp  matmul_clamp_f32_bf16p_bf16p_test.cpp  matmul_clamp_f32_f16p_qsi4c32p_test.cpp  matmul_clamp_f32_f32_f32p_test.cpp  matmul_clamp_f32_qai8dxp_qsi4cxp_test.cpp  matmul_clamp_f32_qai8dxp_qsi8cxp_test.cpp  matmul_clamp_f32_qai8dxp_qsu2cxp_test.cpp  matmul_clamp_f32_qsi8d32p_qai4c32p_test.cpp  matmul_clamp_f32_qsi8d32p_qsi4c32p_test.cpp  matmul_clamp_qai8_qai8p_qsi8cxp_test.cpp  matmul_clamp_qai8dxp_qsi4c32p_test.cpp  matmul_test.cpp
tools/: check_benchmark_microkernels.py
(+159 files in other folders)
